# EVSE-Security-Lab

./: .env.example  .gitignore  LICENSE  README.md  alarms.json  automated_data_generator.py  clean_venv_all.sh  finalize_branches.sh  objects.json  package-lock.json  package.json  requirements.txt  run_all.py  setup_docs_branch.ps1  setup_repo.ps1  state_buffer.py
Anomaliler/Berat_erol/: README.md
Anomaliler/Bercem_bicer/: README.md
Anomaliler/Merve_ozberk/: Hayalet_Akim_SWOT_SMART.docx
Dashboard/: dashboard.py  index.html
Dokumantasyon/Check_List/: README.md
Dokumantasyon/Proje_Sunumu/: README.md
Simulasyon/Emin TÖRE/: README.md
Simulasyon/Mahmut DAĞAŞAN/: charge_point_manipulator  csms_server.py
Simulasyon/ahmet_thermal_manipulation/: README.md  csms.py  dataNoise.py  scenario.py
Simulasyon/api/: server.py
Simulasyon/berat_time_desync/: cp_simulator.py  final_server_v3.py  hacker.py  istasyon.py  payload_generator.py  raw_cp_client.py  scenario.py
Simulasyon/core/: core_cp.py  core_csms.py  event_bus.py  (+5 more)
Simulasyon/hasan_sido_session_hijacking/: QUICKSTART.md  README.md  TECHNICAL.md  anomaly_detector.py  attack_scenarios.py  charging_session.py  examples.py  main.py  ocpp_messages.py  pyproject.toml  reporting.py
Simulasyon/hasan_sido_session_hijacking/reports/: report_20251216_011000.json  report_20251216_011000.md  report_20251216_011232.json  report_20251216_011232.md
dashboard/: package-lock.json  package.json  vite.config.js
data/: dataset.csv
dokumantasyon/: Zaman Çizelgesi
sui_admin/: Move.toml
tools/: seal_packer.js
(+157 files in other folders)
