[project]
name = "simulasyon"
version = "0.1.0"
description = "OCPP Charging Station Session Hijacking Simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "python-dateutil>=2.8.2",
    "colorama>=0.4.6",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
]
